--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -168,7 +168,7 @@
                             </li>
                             <li data-aos="fade-up" data-aos-duration="200">
                                 <span class="iconlist"><img src="images/active.png" loading="lazy" alt=""></span>
-                                <p> Author of “Your Journey to Success” & “The Greatness Movement”</p>
+                                <p> Author of “Your Journey to Success” & “Your Journey to Being Yourself”</p>
                             </li>
                             <li data-aos="fade-up" data-aos-duration="300">
                                 <span class="iconlist"><img src="images/podcast.png" loading="lazy" alt=""></span>
@@ -176,7 +176,7 @@
                             </li>
                             <li data-aos="fade-up" data-aos-duration="400">
                                 <span class="iconlist"><img src="images/creator.png" loading="lazy" alt=""></span>
-                                <p> Creator of Emotional authenticity  method </p>
+                                <p> Creator of Emotional Authenticity method </p>
                             </li>
                             <li data-aos="fade-up" data-aos-duration="500">
                                 <span class="iconlist"><img src="images/conference.png" loading="lazy" alt=""></span>
