--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -573,8 +573,8 @@ a.contact-nav {
     transform: scale(1);
 }
 .blogdetailspage .main-content h3, .blogdetailspage .main-content h4, .blogdetailspage .main-content h5, .blogdetailspage .main-content h6 {
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 .blogdetailspage .main-content p {
     margin-bottom: 15px;
@@ -2391,21 +2391,18 @@ h5.info-title {
 }
 
 
-.journey-point {
-    display: grid;
-    grid-template-columns:1fr 35%;
-    width: 100%;
-    gap: 28px;
-    position: relative;
-    align-items: start;
-}
-.journey-point .left-box 
- {
-    position: sticky;
-    top: 90px;
-}
+ 
+ 
 .left-box {
-    flex: 1 1 50%;
+   margin-bottom: 10px;
+   text-align: center;
+}
+.left-box .button-row a.button.mt3 {
+    margin-top: 0px !important;
+}
+.left-box .button-row {
+    justify-content: center;
+    margin-bottom: 22px;
 }
 
 .left-box h2 {
@@ -2437,7 +2434,7 @@ h5.info-title {
 
 .benefits-list { 
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 0px 25px;
 }
 
@@ -2473,6 +2470,7 @@ h5.info-title {
 
 .journey-point p {
     margin: 0;
+    margin-bottom: 10px;
 }
 
 .industry-grid {
@@ -3091,7 +3089,7 @@ iframe {
     display: grid;
     align-items: center;
     justify-content: space-between;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
     margin-bottom: 60px;
     margin-top: 60px;
@@ -3853,7 +3851,7 @@ section.section-panel {
 }
 
 .imghigh {
-    max-height: 500px;
+    max-height: 545px;
     overflow: hidden;
     border-radius: 15px;
 }
@@ -5642,7 +5640,7 @@ section.sourses-section .right-content h3 {
     display: block;
     border-radius: 16px;
     width: 245px;
-    height: 230px;
+    height: 100%;
 
 }
 
@@ -7104,10 +7102,7 @@ a.button.border-only {
     .positionsticky {
         position: static;
     }
-.journey-point .left-box {
-    position: relative;
-    top: 0;
-}
+ 
 .video-boxes img { 
     width: 100%;
     height: 100%; 
@@ -7566,9 +7561,7 @@ a.button.border-only {
         padding: 25px;
     }
 
-    .journey-point {
-        gap: 50px;
-    }
+   
 
 
     .healing-inner-pages.height-7 {
