--- a/src/app/layout/contact/contact.component.html
+++ b/src/app/layout/contact/contact.component.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="contact-into">
                 <h5 class="tag-line">Contact us</h5>
-                <h3>Let’s Make Something <br>Great Together</h3>
+                <h3>Let’s Start Your Healing <br>Journey Together</h3>
             </div>
             <div class="contactflexform">
                 <div class="leftcontactimg">
@@ -67,14 +67,15 @@
                     </div>
                 </div>
 
-                <!-- <div class="contacts-box">
+                <div class="contacts-box">
                     <div class="iconcontact">
-                        <i class="fa-solid fa-phone"></i>
+                       <i class="fa-solid fa-clock"></i>
                     </div>
                     <div class="contact-content">
-                        <h4>Phone</h4>
+                        <h4>Time</h4>
+                        <p>Mon. - Thursday - 7AM - 5 PM</p>
                     </div>
-                </div> -->
+                </div>
                 <div class="contacts-box">
                     <div class="iconcontact">
                         <i class="fa-solid fa-location-dot"></i>
