--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2397,13 +2397,7 @@ h5.info-title {
    margin-bottom: 10px;
    text-align: center;
 }
-.left-box .button-row a.button.mt3 {
-    margin-top: 0px !important;
-}
-.left-box .button-row {
-    justify-content: center;
-    margin-bottom: 22px;
-}
+ 
 
 .left-box h2 {
     font-size: 2.5rem;
@@ -2416,7 +2410,9 @@ h5.info-title {
     margin-bottom: 30px;
     color: #333;
 }
-
+.journey-point .button-row {
+    justify-content: center;
+}
 .right-box {
     border: 1px solid #bba056;
     padding: 19px;
