--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,4 +1,8 @@
 <main>
+    <div class="maincontentbanner">
+    <div class="banner0mobileview">
+        <img src="./images/16.jpeg">
+    </div>
     <section class="banner" style="background-image: url(./images/banner.jpeg);">
         <div class="container">
             <div class="bannerflex">
@@ -9,8 +13,9 @@
                         misery.</p>
                     <div class="button-row">
                         <a class="button whitebt" routerLink="/courses">Explore courses</a>
-                        <a class="button whitebt" routerLink="/book-session">Book a meeting with Kenny</a>
+                        <a class="button whitebt" routerLink="/book-session">Book a session with Kenny</a>
                     </div>
+
 
                     <p class="people">Trusted by 4,000+ people</p>
                     <div class="logos-people">
@@ -28,7 +33,7 @@
 
         <img src="./images/shep.svg" class="banner-shep" loading="lazy" alt="">
     </section>
-
+</div>
     <section id="top0" class="vertyvery" data-aos="fade-up" data-aos-duration="1500">
         <div class="container">
             <div class="vertyvery-box">
