--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -282,7 +282,7 @@
                         </div>
                     </div>
 
-                    <a routerLink="/book-session" class="button">BOOK A MEETING WITH KENNY</a>
+                    <a routerLink="/book-session" class="button">Book a session with Kenny</a>
                 </div>
             </div>
 
@@ -386,7 +386,7 @@
                     <div class="sandstone-logo-blk">
                         <img src="images/sandstone-logo-blk.webp" loading="lazy" alt="">
                     </div>
-                    <a routerLink="/book-session" class="button mt-3">BOOK A MEETING WITH KENNY</a>
+                    <a routerLink="/book-session" class="button mt-3">Book a session with Kenny</a>
 
 
                 </div>
