--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3626,7 +3626,7 @@ a.post-link {
 .formcontainer {
     display: flex;
     gap: 20px;
-    align-items: center;
+    align-items: start;
     margin: 13px 0;
 }
 
@@ -4376,6 +4376,7 @@ section.free-download {
     padding: 10px;
     font-family: "Montserrat", sans-serif;
     width: 100%;
+    background-color: #fff;
 }
 
 .flexfield {
@@ -7122,6 +7123,22 @@ a.button.border-only {
 .right-box { 
     order: 2;
 }
+.video-boxes.videos2 {
+    width: 18%;
+    height: auto;
+    bottom: -12%;
+}
+
+
+.video-boxes .audio-player { 
+    top: 28%;
+    left: 38%;
+}
+
+
+
+
+
 
 }
 
@@ -7622,8 +7639,9 @@ section.banner {
     }
 
     .video-boxes .audio-player {
-        top: 28%;
+      top: 50%;
         left: 35%;
+        transform: translateY(-90%);
     }
 
     .formcontainer input[type="text"],
@@ -7631,7 +7649,9 @@ section.banner {
 
         width: auto;
     }
-
+.right-content .button-row {
+    padding-left: 30px;
+}
     .formcontainer {
         flex-wrap: wrap;
     }
@@ -7720,6 +7740,13 @@ section.banner {
 .benefits-list { 
     grid-template-columns: 1fr; 
 }
+.img2  { 
+    bottom: 0; 
+    width: 115px;
+}
+.video-boxes { 
+        display: none;
+    }
 
 }
 
@@ -7752,7 +7779,11 @@ section.banner {
     .form .row {
         flex-wrap: wrap;
     }
-
+.video-boxes.videos2 
+ {
+        width: 30%; 
+        bottom: -25%;
+    }
     section.book-section.podcast-banner {
         padding-bottom: 0px;
     }
@@ -7787,7 +7818,10 @@ section.banner {
         grid-template-columns: repeat(1, 1fr);
 
     }
-
+.audible-button img {
+    width: 15px;
+    height: 20px; 
+}
     ul.post-meta {
         flex-wrap: wrap;
     }
@@ -7842,17 +7876,23 @@ section.banner {
     }
 
     .video-boxes img {
-        height: 160px;
+        height: 100%;
     }
 
     .video-boxes {
-        height: 160px;
+        height: 150px;
     }
 
     h3 {
         font-size: 1.5em;
     }
     .banner-content h1 {
+    font-size: 2em;
+}
+.blogdetailspage iframe {
+    height: 210px;
+}
+.left-wordsendcycal h3 { 
     font-size: 2em;
 }
 }
