--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2790,10 +2790,6 @@ a.buttobooksec {
     margin: 45px 0px;
 }
 
-.feature {
-    margin-bottom: 20px;
-}
-
 .nutrition-image {
     width: 45%;
     min-width: 35%;
@@ -5683,6 +5679,7 @@ section.sourses-section .right-content h3 {
 .feature {
     display: flex;
     margin-bottom: 20px;
+    margin-top: 20px;
     gap: 10px;
     align-items: flex-start;
 }
@@ -7105,6 +7102,7 @@ a.button.border-only {
 
     .right-content {
         order: 2;
+        max-width: 100%;
     }
 
     .positionsticky {
@@ -7136,10 +7134,23 @@ a.button.border-only {
 }
 
 
+.about-banner .left-about {
+    order: 2;
+}
 
-
-
-
+.who-we-are a.button {
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    display: block;
+    max-width: 270px;
+}
+.right-area a.button {
+    max-width: 340px;
+    display: block;
+    margin: 0 auto;
+}
 }
 
 
@@ -7321,7 +7332,7 @@ section.banner {
         grid-template-columns: 100%;
     }
 
-    .about-row,
+     
     .video-box-row,
     .wellness-header,
     .meta,
@@ -7754,7 +7765,11 @@ section.banner {
     .grid-3-7 {
         padding: 30px 0;
     }
- 
+ .audible-button {
+    max-width: 100%;
+}
+
+
     section.who-we-are {
         padding: 30px 0px;
     }
@@ -7763,7 +7778,9 @@ section.banner {
         gap: 20px 0px;
         flex-wrap: wrap;
     }
-
+.video-sec {
+        height: auto;
+    }
     .righttresourcsertymain h2 {
         font-size: 2em;
     }
@@ -7794,12 +7811,7 @@ section.banner {
 
     .flexbuttoons a.button {
         width: 100%;
-    }
-
-    .progress-content {
-        grid-template-columns: repeat(1, 1fr);
-    }
-
+    } 
     .formcontainer input[type="text"],
     .formcontainer input[type="email"] {
         width: 100%;
@@ -7895,4 +7907,24 @@ section.banner {
 .left-wordsendcycal h3 { 
     font-size: 2em;
 }
+.childhoodimg { 
+    height: auto; 
 }
+
+.childhoodimg img {
+    position: relative; 
+    height: auto; 
+}
+
+
+
+
+
+
+
+
+
+
+}
+
+ 
