--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -51,6 +51,10 @@ h4 {
     font-weight: 700;
 }
 
+.contacts-box i {
+    font-size: 23px;
+}
+
 /*******header -color *********/
 header.header.blacktext.homenav ul.navmenu li a.active {
     color: #fff;
@@ -118,12 +122,15 @@ header.header.blacktext ul.navmenu i {
 header.header.blacktext.homenav ul.navmenu li ul.doropmenu li a {
     color: #000000;
 }
+
 .boxlist-content h5 {
     font-size: 18px;
 }
+
 .boxlist-content p {
     font-size: 14px;
 }
+
 .error {
     color: #ff0000;
 }
@@ -158,7 +165,6 @@ a.button.mt3 {
 .mentor-image img {
     width: 250px;
     height: 250px;
-
     border-radius: 5px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
@@ -274,6 +280,7 @@ ul.navmenu li i {
     font-size: 0.8em;
     cursor: pointer;
 }
+
 .event-details-right ul.features.doterd.full {
     padding-left: 25px;
 }
@@ -576,15 +583,21 @@ a.contact-nav {
     visibility: visible;
     transform: scale(1);
 }
-.blogdetailspage .main-content h3, .blogdetailspage .main-content h4, .blogdetailspage .main-content h5, .blogdetailspage .main-content h6 {
+
+.blogdetailspage .main-content h3,
+.blogdetailspage .main-content h4,
+.blogdetailspage .main-content h5,
+.blogdetailspage .main-content h6 {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
 .blogdetailspage .main-content p {
     margin-bottom: 15px;
     margin-top: 15px;
-} 
-.blogdetailspage iframe{
+}
+
+.blogdetailspage iframe {
     height: 530px;
 }
 
@@ -1227,6 +1240,7 @@ ul.doterd li {
     position: relative;
     margin-bottom: 15px;
 }
+
 .bookasectionage p {
     margin-bottom: 15px;
 }
@@ -2398,13 +2412,13 @@ h5.info-title {
 }
 
 
- 
- 
+
+
 .left-box {
-   margin-bottom: 10px;
-   text-align: center;
+    margin-bottom: 10px;
+    text-align: center;
 }
- 
+
 
 .left-box h2 {
     font-size: 2.5rem;
@@ -2417,9 +2431,11 @@ h5.info-title {
     margin-bottom: 30px;
     color: #333;
 }
+
 .journey-point .button-row {
     justify-content: center;
 }
+
 .right-box {
     border: 1px solid #bba056;
     padding: 19px;
@@ -2435,7 +2451,7 @@ h5.info-title {
     padding-left: 0;
 }
 
-.benefits-list { 
+.benefits-list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 0px 25px;
@@ -2495,9 +2511,11 @@ h5.info-title {
     gap: 20px;
     padding-left: 65px;
 }
+
 .main-content ol li {
     margin-bottom: 10px;
 }
+
 .industry-card .icon {
     position: absolute;
     left: 0;
@@ -3065,11 +3083,13 @@ iframe {
     width: 60px;
     text-align: center;
     line-height: 60px;
-    display: inline-block;
+    display: flex;
     transition: all 0.4s;
     background-color: #512570;
     border-radius: 50%;
     color: #ffffff;
+    align-items: center;
+    justify-content: center;
 }
 
 .contact-content {
@@ -3650,7 +3670,7 @@ button.button.submit-btn {
     margin-top: 0;
     border-radius: 4px;
 }
- 
+
 section.book-section.page {
     padding: 100px 0;
 }
@@ -6610,9 +6630,11 @@ a.button.border-only {
     font-size: 0.8em;
     font-weight: 500;
 }
+
 .banner0mobileview {
     display: none;
 }
+
 /*********************Mobile styles ************************/
 @media (max-width: 1300px) {
     ul.navmenu {
@@ -7110,35 +7132,33 @@ a.button.border-only {
     .positionsticky {
         position: static;
     }
- 
-.video-boxes img { 
-    width: 100%;
-    height: 100%; 
-}
-.coressdetailes .video-boxes.mt22 {
-    width: 155px;
-    height: 128px;
-    bottom: -80px;
-}
-.right-box { 
-    order: 2;
-}
-.video-boxes.videos2 {
-    width: 18%;
-    height: auto;
-    bottom: -12%;
-}
+
+    .video-boxes img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .coressdetailes .video-boxes.mt22 {
+        width: 155px;
+        height: 128px;
+        bottom: -80px;
+    }
+
+    .right-box {
+        order: 2;
+    }
+
+    .video-boxes.videos2 {
+        width: 18%;
+        height: auto;
+        bottom: -12%;
+    }
 
 
-.video-boxes .audio-player { 
-    top: 28%;
-    left: 38%;
-}
-
-
-
-
-
+    .video-boxes .audio-player {
+        top: 28%;
+        left: 38%;
+    }
 
 }
 
@@ -7198,22 +7218,23 @@ a.button.border-only {
         width: 100%;
         padding: 0px 20px;
     }
-.banner0mobileview {
-    display: block;
-}
+
+    .banner0mobileview {
+        display: block;
+    }
+
     .videotestiomonials,
     .courses-details-banner {
         width: 100%;
     }
-section.banner {
-    background-image: none !important;
-}
 
-.bannerflex { 
-    justify-content: center;
-}
+    section.banner {
+        background-image: none !important;
+    }
 
-
+    .bannerflex {
+        justify-content: center;
+    }
 
     .lastcontnt {
         text-align: center;
@@ -7308,14 +7329,14 @@ section.banner {
         gap: 50px;
     }
 
-    .button {
-        font-size: 12px;
-    }
 
     .flexsocial.whitei {
         display: none;
     }
 
+    .services div {
+        font-size: 1.4em;
+    }
 
     .book-banner {
         grid-template-columns: 100%;
@@ -7328,7 +7349,9 @@ section.banner {
     .podcast-row {
         display: block;
     }
-
+.info {
+    font-size: 1em; 
+}
     .services {
         grid-template-columns: 1fr 1fr;
         gap: 10px;
@@ -7508,7 +7531,6 @@ section.banner {
         padding: 0px 10px 40px;
     }
 
-
     .audio-player {
         gap: 5px;
     }
@@ -7596,9 +7618,6 @@ section.banner {
         padding: 25px;
     }
 
-   
-
-
     .healing-inner-pages.height-7 {
         background-position: center;
     }
@@ -7639,7 +7658,7 @@ section.banner {
     }
 
     .video-boxes .audio-player {
-      top: 50%;
+        top: 50%;
         left: 35%;
         transform: translateY(-90%);
     }
@@ -7649,9 +7668,11 @@ section.banner {
 
         width: auto;
     }
-.right-content .button-row {
-    padding-left: 30px;
-}
+
+    .right-content .button-row {
+        padding-left: 30px;
+    }
+
     .formcontainer {
         flex-wrap: wrap;
     }
@@ -7686,13 +7707,15 @@ section.banner {
         height: auto;
         width: 100%;
         margin: 0 auto;
-        padding: 75px 0px; 
+        padding: 75px 0px;
         background-color: #000000;
     }
- section.banner::after{
-    content: "";
-    display: none;
- }
+
+    section.banner::after {
+        content: "";
+        display: none;
+    }
+
     main.pt-1.pt-4 {
         padding-top: 70px;
     }
@@ -7737,24 +7760,49 @@ section.banner {
     h5.wp-block-heading {
         font-size: 1.5em;
     }
-.benefits-list { 
-    grid-template-columns: 1fr; 
-}
-.img2  { 
-    bottom: 0; 
-    width: 115px;
-}
-.video-boxes { 
+
+    .benefits-list {
+        grid-template-columns: 1fr;
+    }
+
+    .img2 {
+        bottom: 0;
+        width: 115px;
+    }
+
+    .video-boxes {
         display: none;
     }
 
+    .button,
+    a.culction {
+        font-size: 15px;
+    }
+
+    p,
+    .read-more-btn,
+    .testimonial-message,
+    .card-body p,
+    .cta-box small,
+    .author-info,
+    .icon-item p,
+    .testimonial-role,
+    .boxlist-content p,
+    .description {
+        font-size: 1.2em;
+    }
+
+}
+
+.caption {
+    font-size: 1.1em;
 }
 
 @media (max-width: 500px) {
     .grid-3-7 {
         padding: 30px 0;
     }
- 
+
     section.who-we-are {
         padding: 30px 0px;
     }
@@ -7779,11 +7827,12 @@ section.banner {
     .form .row {
         flex-wrap: wrap;
     }
-.video-boxes.videos2 
- {
-        width: 30%; 
+
+    .video-boxes.videos2 {
+        width: 30%;
         bottom: -25%;
     }
+
     section.book-section.podcast-banner {
         padding-bottom: 0px;
     }
@@ -7818,10 +7867,12 @@ section.banner {
         grid-template-columns: repeat(1, 1fr);
 
     }
-.audible-button img {
-    width: 15px;
-    height: 20px; 
-}
+
+    .audible-button img {
+        width: 15px;
+        height: 20px;
+    }
+
     ul.post-meta {
         flex-wrap: wrap;
     }
@@ -7886,13 +7937,16 @@ section.banner {
     h3 {
         font-size: 1.5em;
     }
+
     .banner-content h1 {
-    font-size: 2em;
-}
-.blogdetailspage iframe {
-    height: 210px;
-}
-.left-wordsendcycal h3 { 
-    font-size: 2em;
-}
+        font-size: 2em;
+    }
+
+    .blogdetailspage iframe {
+        height: 210px;
+    }
+
+    .left-wordsendcycal h3 {
+        font-size: 2em;
+    }
 }
